--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "vara": "^1.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
