--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@react-google-maps/api": "^2.20.3",
     "@react-spring/parallax": "^9.7.5",
     "@react-spring/web": "^9.7.5",
     "flowbite": "^2.5.2",
