Add member schools and calendar pages

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "react-scroll-motion": "^0.3.3",
     "vara": "^1.4.1"
   },
   "devDependencies": {
