--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-spring/web": "^9.7.5",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^11.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
