--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.1.6",
     "@react-google-maps/api": "^2.20.3",
     "@react-spring/parallax": "^9.7.5",
     "@react-spring/web": "^9.7.5",
