--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.27.0",
     "react-scroll-motion": "^0.3.3",
     "vara": "^1.4.1"
